WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93849
[Qt] QNX build fails due to ctype usage in system headers
https://bugs.webkit.org/show_bug.cgi?id=93849
Summary
[Qt] QNX build fails due to ctype usage in system headers
Milian Wolff
Reported
2012-08-13 08:07:32 PDT
Building QtWebKit for QNX fails because some system headers use ctype and trigger the compile error introduced by WTF/wtf/DisallowCType.h. This header is included in multiple places (Source/WebKit2/config.h, Source/WTF/config.h,Source/JavaScriptCore/config.h, Source/WebKit/mac/WebKitPrefix.h, Source/WebCore/config.h). Some of these includes are guarded, i.e.: Source/WebCore/config.h // this breaks compilation of <QFontDatabase>, at least, so turn it off for now // Also generates errors on wx on Windows, presumably because these functions // are used from wx headers. On GTK+ for Mac many GTK+ files include <libintl.h> // or <glib/gi18n-lib.h>, which in turn include <xlocale/_ctype.h> which uses // isacii(). #if !PLATFORM(QT) && !PLATFORM(WX) && !PLATFORM(CHROMIUM) && !(OS(DARWIN) && PLATFORM(GTK)) && !OS(QNX) && !defined(_LIBCPP_VERSION) #include <wtf/DisallowCType.h> #endif Source/JavaScriptCore/config.h // this breaks compilation of <QFontDatabase>, at least, so turn it off for now // Also generates errors on wx on Windows and QNX, because these functions // are used from wx and QNX headers. #if !PLATFORM(QT) && !PLATFORM(WX) && !OS(QNX) #include <wtf/DisallowCType.h> #endif Source/WTF/config.h // this breaks compilation of <QFontDatabase>, at least, so turn it off for now // Also generates errors on wx on Windows and QNX, because these functions // are used from wx and QNX headers. #if !PLATFORM(QT) && !PLATFORM(WX) && !OS(QNX) #include <wtf/DisallowCType.h> #endif I'd say these checks should go into DisallowCType.h directly to prevent futher issues like this: make[2]: Entering directory `/home/milian/projects/qt5/build-playbook/qtwebkit/Release/Source/WebKit2' qcc -Vgcc_ntoarmv7le -lang-c++ -c -fstack-protector -fstack-protector-all -Wno-psabi -O2 -fvisibility=hidden -fvisibility-inlines-hidden -fPIC -D_REENTRANT -DQ_OS_BLACKBERRY -DENABLE_3D_RENDERING=0 -DENABLE_WEBGL=0 -DWTF_USE_ICU_UNICODE=1 -DHAVE_QRAWFONT=1 -DHAVE_FONTCONFIG=1 -DENABLE_XSLT=1 -DWTF_USE_ZLIB=1 -DWTF_USE_TILED_BACKING_STORE=1 -DENABLE_LEGACY_VIEWPORT_ADAPTION=1 -DPLUGIN_ARCHITECTURE_UNSUPPORTED=1 -DHAVE_QSTYLE=1 -DENABLE_FULLSCREEN_API=1 -DENABLE_ACCELERATED_2D_CANVAS=0 -DENABLE_ANIMATION_API=0 -DENABLE_BATTERY_STATUS=0 -DENABLE_BLOB=1 -DENABLE_CHANNEL_MESSAGING=1 -DENABLE_CSP_NEXT=0 -DENABLE_CSS_BOX_DECORATION_BREAK=1 -DENABLE_CSS_EXCLUSIONS=1 -DENABLE_CSS_FILTERS=1 -DENABLE_CSS_GRID_LAYOUT=0 -DENABLE_CSS_IMAGE_ORIENTATION=0 -DENABLE_CSS_IMAGE_RESOLUTION=0 -DENABLE_CSS_REGIONS=1 -DENABLE_CSS_SHADERS=0 -DENABLE_CSS_VARIABLES=0 -DENABLE_CSS3_FLEXBOX=1 -DENABLE_DASHBOARD_SUPPORT=0 -DENABLE_DATAGRID=0 -DENABLE_DATALIST_ELEMENT=1 -DENABLE_DATA_TRANSFER_ITEMS=0 -DENABLE_DETAILS_ELEMENT=1 -DENABLE_DEVICE_ORIENTATION=0 -DENABLE_DIRECTORY_UPLOAD=0 -DENABLE_DOWNLOAD_ATTRIBUTE=0 -DENABLE_FAST_MOBILE_SCROLLING=1 -DENABLE_FILE_SYSTEM=0 -DENABLE_FILTERS=1 -DENABLE_FTPDIR=1 -DENABLE_GAMEPAD=0 -DENABLE_GEOLOCATION=0 -DENABLE_GESTURE_EVENTS=1 -DENABLE_HIGH_DPI_CANVAS=0 -DENABLE_ICONDATABASE=1 -DENABLE_IFRAME_SEAMLESS=1 -DENABLE_INDEXED_DATABASE=0 -DENABLE_INPUT_SPEECH=0 -DENABLE_INPUT_TYPE_COLOR=1 -DENABLE_INPUT_TYPE_DATE=0 -DENABLE_INPUT_TYPE_DATETIME=0 -DENABLE_INPUT_TYPE_DATETIMELOCAL=0 -DENABLE_INPUT_TYPE_MONTH=0 -DENABLE_INPUT_TYPE_TIME=0 -DENABLE_INPUT_TYPE_WEEK=0 -DENABLE_INSPECTOR=1 -DENABLE_INSPECTOR_SERVER=1 -DENABLE_JAVASCRIPT_DEBUGGER=1 -DENABLE_LEGACY_CSS_VENDOR_PREFIXES=0 -DENABLE_LEGACY_NOTIFICATIONS=1 -DENABLE_LEGACY_WEBKIT_BLOB_BUILDER=1 -DENABLE_LINK_PREFETCH=0 -DENABLE_LINK_PRERENDER=0 -DENABLE_MATHML=0 -DENABLE_MEDIA_SOURCE=0 -DENABLE_MEDIA_STATISTICS=0 -DENABLE_MEDIA_STREAM=0 -DENABLE_METER_ELEMENT=1 -DENABLE_MHTML=0 -DENABLE_MICRODATA=0 -DENABLE_MUTATION_OBSERVERS=0 -DENABLE_NETSCAPE_PLUGIN_API=0 -DENABLE_NETWORK_INFO=0 -DENABLE_NOTIFICATIONS=1 -DENABLE_ORIENTATION_EVENTS=0 -DENABLE_PAGE_VISIBILITY_API=1 -DENABLE_PROGRESS_ELEMENT=1 -DENABLE_QUOTA=0 -DENABLE_REGISTER_PROTOCOL_HANDLER=0 -DENABLE_REQUEST_ANIMATION_FRAME=1 -DENABLE_SCRIPTED_SPEECH=0 -DENABLE_SHADOW_DOM=0 -DENABLE_SHARED_WORKERS=1 -DENABLE_SQL_DATABASE=1 -DENABLE_STYLE_SCOPED=0 -DENABLE_SVG=1 -DENABLE_SVG_DOM_OBJC_BINDINGS=0 -DENABLE_SVG_FONTS=1 -DENABLE_TEXT_AUTOSIZING=0 -DENABLE_TEXT_NOTIFICATIONS_ONLY=0 -DENABLE_TOUCH_ADJUSTMENT=1 -DENABLE_TOUCH_EVENTS=1 -DENABLE_TOUCH_ICON_LOADING=0 -DENABLE_UNDO_MANAGER=0 -DENABLE_VIBRATION=0 -DENABLE_VIDEO=0 -DENABLE_VIDEO_TRACK=0 -DENABLE_WEB_AUDIO=0 -DENABLE_WEB_SOCKETS=1 -DENABLE_WEB_TIMING=1 -DENABLE_WORKERS=1 -DENABLE_TOUCH_SLIDER=1 -DWTF_USE_3D_GRAPHICS=0 -DENABLE_3D_RENDERING=0 -DENABLE_WEBGL=0 -DENABLE_3D_RENDERING=0 -DENABLE_WEBGL=0 -DBUILDING_QT__=1 -DNDEBUG -DBUILDING_WebKit2 -DBUILDING_WEBKIT -DQT_ASCII_CAST_WARNINGS -DSQLITE_CORE -DSQLITE_OMIT_LOAD_EXTENSION -DSQLITE_OMIT_COMPLETE -DWTF_USE_LIBJPEG=1 -DWTF_USE_LIBPNG=1 -DSTATICALLY_LINKED_WITH_WebCore -DSTATICALLY_LINKED_WITH_JavaScriptCore -DSTATICALLY_LINKED_WITH_WTF -DQT_NO_DEBUG -DQT_XMLPATTERNS_LIB -DQT_SQL_LIB -DQT_NETWORK_LIB -DQT_GUI_LIB -DQT_CORE_LIB -I/home/milian/projects/qt5/install-playbook/mkspecs/unsupported/blackberry-armv7le-qcc -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2 -I. -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2 -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/Platform -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/Platform/CoreIPC -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/Platform/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/Shared -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/Shared/API/c -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/Shared/CoreIPCSupport -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/Shared/Plugins -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/Shared/Plugins/Netscape -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/Shared/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/API/C -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/API/cpp -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/API/cpp/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/API/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/Authentication -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/CoordinatedGraphics -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/Downloads -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/InspectorServer -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/InspectorServer/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/Launcher -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/Notifications -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/Plugins -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/UIProcess/texmap -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/ApplicationCache -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/Authentication -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/Battery -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/Cookies -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/Cookies/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/Downloads -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/Downloads/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/FullScreen -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/Geolocation -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/IconDatabase -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/InjectedBundle -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/InjectedBundle/DOM -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/InjectedBundle/API/c -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/KeyValueStorage -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/MediaCache -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/NetworkInfo -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/Notifications -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/Plugins -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/Plugins/Netscape -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/ResourceCache -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/WebCoreSupport -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/WebCoreSupport/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/WebPage -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/WebPage/CoordinatedGraphics -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/WebProcess/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebKit2/PluginProcess -I/home/milian/projects/qt5/qtwebkit/Source/WebKit/qt/Api -I/home/milian/projects/qt5/qtwebkit/Source/WTF/wtf/qt -Igenerated -I/home/milian/projects/qt5/qtwebkit/Source -I../include -I/home/milian/projects/qt5/install-playbook/include -I/home/milian/projects/qt5/install-playbook/include/QtScript -I/home/milian/projects/qt5/qtwebkit/Source/WebCore -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/Modules/filesystem -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/Modules/geolocation -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/Modules/indexeddb -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/Modules/notifications -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/Modules/protocolhandler -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/Modules/quota -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/Modules/webaudio -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/Modules/webdatabase -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/Modules/websockets -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/accessibility -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/bindings -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/bindings/generic -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/bridge -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/bridge/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/css -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/dom -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/dom/default -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/editing -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/fileapi -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/history -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/html -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/html/canvas -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/html/parser -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/html/shadow -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/html/track -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/inspector -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/loader -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/loader/appcache -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/loader/archive -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/loader/cache -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/loader/icon -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/mathml -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/page -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/page/animation -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/page/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/page/scrolling -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/animation -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/audio -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/graphics -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/graphics/filters -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/graphics/filters/arm -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/graphics/opengl -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/graphics/opentype -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/graphics/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/graphics/surfaces -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/graphics/texmap -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/graphics/transforms -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/image-decoders -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/image-decoders/bmp -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/image-decoders/ico -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/image-decoders/gif -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/image-decoders/jpeg -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/image-decoders/png -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/image-decoders/webp -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/leveldb -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/mock -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/network -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/network/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/qt -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/sql -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/text -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/platform/text/transcoder -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/plugins -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/rendering -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/rendering/mathml -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/rendering/style -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/rendering/svg -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/storage -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/svg -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/svg/animation -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/svg/graphics -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/svg/graphics/filters -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/svg/properties -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/testing -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/websockets -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/workers -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/xml -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/xml/parser -I/home/milian/projects/qt5/qtwebkit/Source/ThirdParty -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/bridge/jsc -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/bindings/js -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/bridge/c -I/home/milian/projects/qt5/qtwebkit/Source/WebCore/testing/js -I../WebCore/generated -I/home/milian/projects/qt5/qtbase/src/3rdparty/sqlite -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore -I/home/milian/projects/qt5/qtwebkit/Source -I/home/milian/projects/qt5/qtwebkit/Source/WTF -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/assembler -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/bytecode -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/bytecompiler -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/heap -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/dfg -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/debugger -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/disassembler -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/interpreter -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/jit -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/llint -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/parser -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/profiler -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/runtime -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/tools -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/yarr -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/API -I/home/milian/projects/qt5/qtwebkit/Source/JavaScriptCore/ForwardingHeaders -I../JavaScriptCore/generated -I/home/milian/projects/qt5/qtwebkit/Source/WTF -I/home/milian/projects/qt5/install-playbook/include/QtXmlPatterns -I/home/milian/projects/qt5/install-playbook/include/QtSql -I/home/milian/projects/qt5/install-playbook/include/QtNetwork -I/home/milian/projects/qt5/install-playbook/include/QtGui -I/home/milian/projects/qt5/install-playbook/include/QtGui/5.0.0 -I/home/milian/projects/qt5/install-playbook/include/QtGui/5.0.0/QtGui -I/home/milian/projects/qt5/install-playbook/include/QtCore -I/home/milian/projects/qt5/install-playbook/include/QtCore/5.0.0 -I/home/milian/projects/qt5/install-playbook/include/QtCore/5.0.0/QtCore -I/home/milian/bbndk-2.0.1/target/qnx6/usr/include -I/home/milian/bbndk-2.0.1/target/qnx6/usr/include/freetype2 -I. -o obj/release/Platform/CoreIPC/ArgumentCoders.o /home/milian/projects/qt5/qtwebkit/Source/WebKit2/Platform/CoreIPC/ArgumentCoders.cpp In file included from /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/xlocale:12, from /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/xiosbase:7, from /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/streambuf:7, from /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/xlocnum:10, from /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/ios:7, from /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/ostream:7, from /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/istream:7, from /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/string:7, from /home/milian/projects/qt5/install-playbook/include/QtCore/qstring.h:50, from /home/milian/projects/qt5/install-playbook/include/QtCore/qobject.h:48, from /home/milian/projects/qt5/install-playbook/include/QtCore/qiodevice.h:46, from /home/milian/projects/qt5/install-playbook/include/QtCore/qdatastream.h:46, from /home/milian/projects/qt5/install-playbook/include/QtCore/QDataStream:1, from /home/milian/projects/qt5/qtwebkit/Source/WTF/wtf/Vector.h:35, from /home/milian/projects/qt5/qtwebkit/Source/WTF/wtf/Deque.h:37, from /home/milian/projects/qt5/qtwebkit/Source/WebKit2/Platform/CoreIPC/ArgumentDecoder.h:31, from /home/milian/projects/qt5/qtwebkit/Source/WebKit2/Platform/CoreIPC/ArgumentCoders.h:29, from /home/milian/projects/qt5/qtwebkit/Source/WebKit2/Platform/CoreIPC/ArgumentCoders.cpp:27: /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/xlocinfo: In function 'int std::_Tolower(int, const std::_Ctypevec*)': /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/xlocinfo:173: error: 'tolower_WTF_Please_use_ASCIICType_instead_of_ctype_see_comment_in_ASCIICType_h' is not a member of 'std' /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/xlocinfo: In function 'int std::_Toupper(int, const std::_Ctypevec*)': /home/milian/bbndk-2.0.1/target/qnx6/usr/include/cpp/xlocinfo:179: error: 'toupper_WTF_Please_use_ASCIICType_instead_of_ctype_see_comment_in_ASCIICType_h' is not a member of 'std' cc: /home/milian/bbndk-2.0.1/host/linux/x86/usr/lib/gcc/arm-unknown-nto-qnx6.5.0eabi/4.4.2/cc1plus error 1 make[2]: *** [obj/release/Platform/CoreIPC/ArgumentCoders.o] Error 1 make[2]: Leaving directory `/home/milian/projects/qt5/build-playbook/qtwebkit/Release/Source/WebKit2' make[1]: *** [sub-Target-pri-make_first-ordered] Error 2 make[1]: Leaving directory `/home/milian/projects/qt5/build-playbook/qtwebkit/Release/Source/WebKit2' make: *** [sub-Source-WebKit2-WebKit2-pro-make_first-ordered] Error 2 makeobj[0]: Leaving directory `/home/milian/projects/qt5/build-playbook/qtwebkit/Release'
Attachments
Patch
(5.96 KB, patch)
2012-08-13 09:43 PDT
,
Milian Wolff
no flags
Details
Formatted Diff
Diff
Patch
(5.93 KB, patch)
2012-08-17 04:12 PDT
,
Milian Wolff
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Milian Wolff
Comment 1
2012-08-13 09:43:11 PDT
Created
attachment 158022
[details]
Patch
Milian Wolff
Comment 2
2012-08-17 04:12:11 PDT
Created
attachment 159082
[details]
Patch
Simon Hausmann
Comment 3
2012-08-17 04:56:53 PDT
Comment on
attachment 159082
[details]
Patch Makes sense to me, the include guard mess on the includer side is horrible.
WebKit Review Bot
Comment 4
2012-08-17 07:16:39 PDT
Comment on
attachment 159082
[details]
Patch Clearing flags on attachment: 159082 Committed
r125895
: <
http://trac.webkit.org/changeset/125895
>
WebKit Review Bot
Comment 5
2012-08-17 07:16:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug