[Qt] QNX build fails due to ctype usage in system headers https://bugs.webkit.org/show_bug.cgi?id=93849

Patch by Milian Wolff <milian.wolff@kdab.com> on 2012-08-17
Reviewed by Simon Hausmann.

Move the check for whether DisallowCType should be active or not
to the DisallowCType.h header. This way, we can update the list
of platforms or OSes which do not work with this header in a
central place. All users can now safely include the header
and do not need to place custom guards around it.

Source/JavaScriptCore:

* config.h:

Source/WebCore:

* config.h:

Source/WTF:

* config.h:
* wtf/DisallowCType.h:

Canonical link: https://commits.webkit.org/112146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125895 268f45cc-cd09-0410-ab3c-d52691b4dbfc